# smarthome

./: DatabaseManager.h  DeviceManager.cpp  DeviceManager.h  ExpectionManager.cpp  LogManager.cpp  LogManager.h  MenuManager.h  README.md  UserManager.cpp  UserManager.h  main.cpp
src/: CMakeLists.txt  main.cpp
src/ConfigManager/: ConfigManager.cpp  ConfigManager.h
src/DatabaseManager/: DatabaseManager.cpp
src/DeviceManager/: DeviceManager.cpp  DeviceManager.h
src/ExceptionManager/: ExceptionManager.cpp  ExceptionManager.h
src/MenuManager/: MenuManager.cpp
src/UserManager/: UserManager.cpp  UserManager.h
src/config/: settings.cfg
